--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,7 +17,7 @@ body {
   overflow: hidden;
 }
 
-.pause {
+.pause-text {
   position: relative;
   display: flex;
   justify-content: center;
@@ -32,13 +32,21 @@ body {
   z-index: 2;
 }
 
+.pause-button {
+  position: absolute;
+  z-index: 2;
+  top: 95vh;
+  left: 85vw;
+  width: max-content;
+}
+
 .greyscale::after {
   content: "";
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 150%;
+  height: 150%;
   opacity: .7;
   background: grey;
   z-index: 1;
